TAG: mirbaseload-tr7894-BP
DATE: 10/02/2006
STAFF: lec
CHANGES: 
1) TR7894; branch point tag

TAG: mirbaseload-3-5-1-6
DATE: 08/28/2006
STAFF: lec
CHANGES: 
1) TR 7651/new

TAG: mirbaseload-3-5-1-5
TAG: mirbaseload-3-5-1-4
DATE: 08/23/2006
STAFF: lec
CHANGES: 
1) TR 7651/new

TAG: mirbaseload-3-5-1-3
DATE: 08/18/2006
STAFF: lec
CHANGES: 
1) TR 7651/new

TAG: mirbaseload-3-5-1-2
DATE: 08/17/2006
STAFF: lec
CHANGES: 
1) TR 7651/new

TAG: mirbaseload-3-5-1-1
DATE: 08/15/2006
STAFF: lec
CHANGES: 
1) TR 7651/new