@@ -1,3 +1,9 @@
+TAG: mirbaseload-tr7894-1
+DATE: 10/02/2006
+STAFF: lec
+CHANGES: 
+1) TR7894
+
 TAG: mirbaseload-tr7894-BP
 DATE: 10/02/2006
 STAFF: lec
